Communication backend/frontend done